fixed profile area alignment

--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,12 @@
     max-height: 200px;
 }
 
-.Introduction {}
-
 .ProfileArea {
     display: inline-flex;
     border-bottom: 3px solid #000000;
 }
+
+
+/*
+This keeps the items centered in the middle of the page
+*/
